[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "curves"
authors = [
    {name = "Bjarte Myksvoll", email = "bmyks@equinor.com"},
]
description = "My package description"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "MIT"}
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
]